# Algorithms

./: CMakeLists.txt  main.c  main.h  Расчеты .csv  Расчеты .numbers
Lesson1/: Lesson1.c  Lesson1.h
Lesson2/: Lesson2.c  Lesson2.h
Lesson3/: Lesson3.c  Lesson3.h
Lesson4/: Lesson4.c  Lesson4.h
Lesson5/: Lesson5.c  Lesson5.h
Lesson6/: Lesson6.c  Lesson6.h
Utils/: Utils.c  Utils.h
