cmake_minimum_required(VERSION 3.14)
project(Algorithms C)

set(CMAKE_C_STANDARD 11)

add_executable(Algorithms main.c Lesson1/Lesson1.c Lesson1/Lesson1.h main.h Utils/Utils.c Utils/Utils.h Lesson2/Lesson2.c Lesson2/Lesson2.h Lesson3/Lesson3.c Lesson3/Lesson3.h Lesson4/Lesson4.c Lesson4/Lesson4.h Lesson5/Lesson5.c Lesson5/Lesson5.h)